# payroll-manager

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  settings.py
.github/workflows/: python-app.yml
constants/: common.py
constants/enum/: employee_types.py
controller/: employee.py
database/entity/: base_entity.py  employee.py
database/entity_manager/: employee.py
exception/: error_codes.py  error_handlers.py  fastapi_error_types.py  request_param_exception.py
model/request/: calculate_salary_request.py  employee_create_request.py  employee_edit_request.py  employee_update_request.py
model/response/: calculate_salary_response.py  employee_edit_response.py  employee_response.py  get_employees_response.py
service/: employee.py  salary_calculator.py
service/object_class/: contractual_employee.py  employee.py  regular_employee.py
tests/: __init__.py  test_factory.py
tests/api/: conftest.py  schema_def.sql  test_compute_salary.py  test_create_employee.py  test_create_request_validation.py  test_edit_employee.py  test_view_employee.py
utils/: pagination.py  rounding.py
